# real-colon-dataset

./: README.md  bounding_boxes_plots.py  dataset_stats.py  requirements.txt
object_detection/: README.md
realcolon_downloader/: pyproject.toml
realcolon_downloader/downloader/: api.py  main.py  model.py
